--- a/app/src/main/res/layout/tela_cadastro.xml
+++ b/app/src/main/res/layout/tela_cadastro.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="-8dp">
 
@@ -13,7 +14,7 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginStart="82dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="80dp"
         android:background="@color/lightgray"
         android:drawableStart="@drawable/icon_google"
@@ -34,11 +35,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="144dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="144dp"
         android:text="@string/login_criesuaconta"
         android:textColor="@color/secondary"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +53,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="55dp"
         android:autofillHints="@string/cadastro_hint_nomecompleto"
+        android:background="@drawable/border"
         android:ems="10"
         android:hint="@string/cadastro_hint_nomecompleto"
         android:inputType="text|textPersonName"
+        android:textColorHint="@color/darkgray"
+        android:paddingStart="15sp"
+        android:paddingEnd="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -65,9 +70,13 @@
         android:layout_height="50sp"
         android:layout_marginTop="15dp"
         android:autofillHints="@string/cadastro_hint_usuario"
+        android:background="@drawable/border"
         android:ems="10"
         android:hint="@string/cadastro_hint_usuario"
         android:inputType="text|textPersonName"
+        android:textColorHint="@color/darkgray"
+        android:paddingStart="15sp"
+        android:paddingEnd="15sp"
         app:layout_constraintEnd_toEndOf="@+id/form_nome"
         app:layout_constraintStart_toStartOf="@+id/form_nome"
         app:layout_constraintTop_toBottomOf="@+id/form_nome" />
@@ -78,9 +87,13 @@
         android:layout_height="50sp"
         android:layout_marginTop="15dp"
         android:autofillHints="@string/cadastro_hint_email"
+        android:background="@drawable/border"
         android:ems="10"
         android:hint="@string/cadastro_hint_email"
         android:inputType="text|textEmailAddress"
+        android:textColorHint="@color/darkgray"
+        android:paddingStart="15sp"
+        android:paddingEnd="15sp"
         app:layout_constraintEnd_toEndOf="@+id/form_username"
         app:layout_constraintStart_toStartOf="@+id/form_username"
         app:layout_constraintTop_toBottomOf="@+id/form_username" />
@@ -92,9 +105,13 @@
         android:layout_height="50sp"
         android:layout_marginTop="15dp"
         android:autofillHints="@string/cadastro_hint_celular"
+        android:background="@drawable/border"
         android:ems="10"
         android:hint="@string/cadastro_hint_celular"
         android:inputType="phone"
+        android:textColorHint="@color/darkgray"
+        android:paddingStart="15sp"
+        android:paddingEnd="15sp"
         app:layout_constraintEnd_toEndOf="@+id/form_email"
         app:layout_constraintStart_toStartOf="@+id/form_email"
         app:layout_constraintTop_toBottomOf="@+id/form_email" />
@@ -105,9 +122,13 @@
         android:layout_height="50sp"
         android:layout_marginTop="15dp"
         android:autofillHints="@string/cadastro_hint_senha"
+        android:background="@drawable/border"
         android:ems="10"
         android:hint="@string/cadastro_hint_senha"
         android:inputType="text|textPassword"
+        android:paddingStart="15sp"
+        android:paddingEnd="15sp"
+        android:textColorHint="@color/darkgray"
         app:layout_constraintEnd_toEndOf="@+id/form_celular"
         app:layout_constraintStart_toStartOf="@+id/form_celular"
         app:layout_constraintTop_toBottomOf="@+id/form_celular" />
@@ -118,9 +139,13 @@
         android:layout_height="50sp"
         android:layout_marginTop="15dp"
         android:autofillHints="@string/cadastro_hint_senha"
+        android:background="@drawable/border"
         android:ems="10"
         android:hint="@string/cadastro_hint_confirsenha"
         android:inputType="text|textPassword"
+        android:paddingStart="15sp"
+        android:paddingEnd="15sp"
+        android:textColorHint="@color/darkgray"
         app:layout_constraintEnd_toEndOf="@+id/form_senha"
         app:layout_constraintStart_toStartOf="@+id/form_senha"
         app:layout_constraintTop_toBottomOf="@+id/form_senha" />
@@ -132,10 +157,10 @@
         android:layout_marginStart="131dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="130dp"
-        android:background="@color/secondary"
         android:text="@string/login_btn_cadastre"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:background="@drawable/button_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/form_confir_senha" />
