--- a/app/src/main/res/layout/tela_login.xml
+++ b/app/src/main/res/layout/tela_login.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".TelaLogin">
+    tools:context=".TelaInicio">
 
     <ImageView
         android:id="@+id/logo_main"
         android:layout_width="213dp"
         android:layout_height="217dp"
         android:layout_marginStart="99dp"
-        android:layout_marginTop="181dp"
+        android:layout_marginTop="260dp"
         android:layout_marginEnd="99dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/logo_main"
@@ -24,8 +24,8 @@
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@color/secondary"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/button_style"
         android:text="@string/login_btn_entre"
         android:textColor="@color/white"
         app:iconTint="@color/secondary"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/primary"
+        android:background="@color/transparent"
         android:text="@string/login_link_cadastre"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_login"
