--- a/app/src/main/res/layout/tela_perfil.xml
+++ b/app/src/main/res/layout/tela_perfil.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -30,7 +29,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/menu_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/menu_bar"
-        app:srcCompat="@drawable/btn_add" />
+        app:srcCompat="@drawable/btn_camera" />
 
     <ImageButton
         android:id="@+id/btn_forum"
@@ -90,8 +89,9 @@
         tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
 
 
-    <!--fim Menu bottom-->
 
+
+    <!--fim Menu bottom-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
